@@ -22,10 +22,10 @@ EXTRAS = $(PORT_CASES_DIR)/testfwk$(OBJEXT) $(PORT_CASES_DIR)/support$(OBJEXT)
 	$(SDCC) $(SDCCFLAGS) $(LINKFLAGS) -L$(LIBDIR) $(EXTRAS) $< -o $@
 
 $(PORT_CASES_DIR)/%$(OBJEXT): $(PORTS_DIR)/$(PORT)/%.asm
-	$(top_builddir)/bin/as-z80 -plosgff $@ $<
+	$(top_builddir)/bin/as-z80 -plosgff $<
 
 %$(OBJEXT): %.s
-	$(top_builddir)/bin/as-z80 -plosgff $@ $<
+	$(top_builddir)/bin/as-z80 -plosgff $<
 
 %$(OBJEXT): %.c
 	$(SDCC) $(SDCCFLAGS) -c $< -o $@
